2005-12-09 Magnus Hagdorn
 * CF_area.py: add option to annotate contours
 * CF_loadfile.py: make error somewhat more verbose
 * CF_rsl.py: add selection for Britain
 * construct_field.py: minor optimisation
 * plotCFvar.py: can plot custom contours (which can also be annotated)
 * plotRSL.py: autolayout plot

2005-11-30 Magnus Hagdorn
 * CF_IOmisc.py: new class for reading contours
 * construct_field.py: can read polygons from file

2005-11-28 Magnus Hagdorn
 * CF_diff.py: fix bug where colourmap file got deleted to early
 * CF_rsl.py: add class for plotting colour histogram of RSL residuals
 * plotRSLres.py: use new class for colour histograms

2005-11-28 Magnus Hagdorn
 * CF_loadfile.py: add bvel_tavg to calculated variables
 * CF_colourmap.py: add colourmap for bvel_tavg
 * CF_area.py: add velo components for bvel_tavg
 * plotCFvar.py: add glyphs for bvel_tavg
 * plotStreams.py: use bvel_tavg if available

2005-11-15 Magnus Hagdorn
 * CF_options.py: use reasonable font sizes for plots
 * CF_rsl.py: change default RSL data base
 * plot3DProfiles.py: minor improvement
 * plotStreams.py: slightly move colour legend
 * make_anim.py: new script for animating PyCF output
 * setup.py: hook up new script
 
2005-11-23 Magnus Hagdorn
 * CF_options.py: when loading profile, select honour xrange settings
 * CF_profile.py: scale xrange properly
 * CF_profilearea.py: we can now also create an empty AutoXY area
 * plotProfile.py: add xrange settings to options
 * plotCFvar.py: handle a number of profiles
 * plot_extent.py: ditto
 * construct_field.py: new program for setting variable values inside and
   outside a polygon
 * setup.py: hook up construct_field.py

2005-11-20 Magnus Hagdorn
 * CF_area.py: add method to plot averageRSL residuals on map
 * CF_loadfile.py: when loading RSL residuals can also get time average
 * plotRSLres.py: new program to plot RSL residuals on map
 * rsl_res.cpt: new colour map for RSL residuals
 * setup.py: hook up new files
